--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,12 @@ services:
       context: node
     container_name: node
     entrypoint: dockerize -wait tcp://db:3306 -timeout 30s docker-entrypoint.sh
-    command: node index.js
+    command: sh -c "npm install && node index.js"
     networks:
       - node-network
     volumes:
       - ./node:/usr/src/app
     tty: true
-    #ports:
-    #  - "3000:3000"
     depends_on:
       - db
   db:
